--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Chengdu, China"
   employer         : "University of Electronic Science and Technology of China (UESTC)"
   uri              : "https://blog.csdn.net/VictoryCzt" # URL
-  email            : "none@example.org" 
+  email            : "chengzhitao@alu.uestc.edu.cn" 
 
   # Academic websites
   # arxiv            : # URL - Update with the correct link to your profile
