--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "myself.png"
   name             : "Zhitao Cheng"
   pronouns         : "he/him" # example: "she/her"  
-  bio              : "An explore in AI"
+  bio              : "A learner and explorer in AI and Math"
   location         : "Chengdu, China"
   employer         : "University of Electronic Science and Technology of China (UESTC)"
   uri              : "https://blog.csdn.net/VictoryCzt" # URL
