--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : "he/him" # example: "she/her"  
   bio              : "A learner and explorer in AI and Math"
   location         : "Chengdu, China"
-  employer         : "University of Electronic Science and Technology of China (UESTC)"
+  employer         : "UESTC"
   uri              : "https://blog.csdn.net/VictoryCzt" # URL
   email            : "chengzhitao@alu.uestc.edu.cn" 
 
