--- a/_config.yml
+++ b/_config.yml
@@ -62,7 +62,7 @@ author:
   # medium           : # URL
   # pinterest        : # Username
   # soundcloud       : # Username
-  steam            : "CrazyTea" # Username
+  # steam            : "CrazyTea" # Username
   # telegram         : # URL
   # tumblr           : # Username
   # twitter          : # Username for X / Twitter
