--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Zhitao Cheng"
   pronouns         : "he/him" # example: "she/her"  
   bio              : "A learner and explorer in AI and Math"
-  location         : "Chengdu, China"
+  location         : "Chengdu, Sichuan, China"
   employer         : "UESTC"
   uri              : "https://blog.csdn.net/VictoryCzt" # URL
   email            : "chengzhitao@alu.uestc.edu.cn" 
