--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "Chengdu, Sichuan, China"
   employer         : "UESTC"
   uri              : "https://blog.csdn.net/VictoryCzt" # URL
-  email            : "chengzhitao@alu.uestc.edu.cn" 
+  email            : "victoryczt@gmail.com" 
 
   # Academic websites
   # arxiv            : # URL - Update with the correct link to your profile
